@@ -21,14 +21,11 @@
 </longdescription>
 <use>
 	<flag name="3dnowext">Enable 3dnowext cpu instructions</flag>
-	<flag name="amr">Enables Adaptive Multi-Rate format support</flag>
-	<flag name="bl">Blinkenlights video output</flag>
 	<flag name="bluray">Enable playback of Blu-ray filesystems</flag>
 	<flag name="bs2b">Enable Bauer stereophonic-to-binaural headphone filter</flag>
 	<flag name="cdio">Use libcdio for CD support (instead of cdparanoia)</flag>
 	<flag name="cpudetection">Enables runtime CPU detection (useful for bindist, compatibility on other CPUs)</flag>
 	<flag name="dvdnav">Use forked libdvdnav, navigate menus in GUIs</flag>
-	<flag name="dxr3">Enable DXR3/H+ video output</flag>
 	<flag name="enca">Enables support for charset discovery and conversion</flag>
 	<flag name="faad">Use external faad library for AAC decoding</flag>
 	<flag name="md5sum">Enables md5sum video output</flag>
@@ -45,14 +42,11 @@
 	<flag name="rar">Enable Unique RAR File Library</flag>
 	<flag name="real">Adds real audo/video support</flag>
 	<flag name="rtc">Enables usage of the linux real time clock. The alternative is software emulation of rtc</flag>
-	<flag name="rtmp">Enables RTMP support through librtmp</flag>
-	<flag name="schroedinger">Enable Dirac video support (an advanced royalty-free video compression format) via libschroedinger (high-speed implementation in C of the Dirac codec).</flag>
 	<flag name="shm">Enable support for shm</flag>
 	<flag name="ssse3">Faster floating point optimization for SSSE3 capable chips (Intel Core 2 and later chips)</flag>
 	<flag name="symlink">Copy all binaries and configuration into locations occupied by <pkg>media-video/mplayer</pkg> and thus act like drop-in replacement.</flag>
 	<flag name="tga">Enables Targa video output</flag>
 	<flag name="vdpau">Enables experimental VDPAU support (requires nVidia video cards) to offload MPEG2/MPEG4/VC1/WMV CPU processing to video card</flag>
-	<flag name="vpx">Enables vp8 codec support using libvpx: Decoding vp8 does not require this to be enabled but libvpx can also be used for decoding; encoding vp8 requires this useflag to be enabled though.</flag>
 	<flag name="xanim">Enables support for xanim based codecs</flag>
 	<flag name="yuv4mpeg">Enables yuv4mpeg video output</flag>
 </use>
